company updated