@@ -3,9 +3,11 @@ package management.sedef.company.controller;
 import jakarta.validation.constraints.Positive;
 import lombok.RequiredArgsConstructor;
 import management.sedef.common.model.entity.response.SuccessResponse;
+import management.sedef.common.model.request.TokenRequest;
 import management.sedef.company.model.Company;
 import management.sedef.company.model.mapper.companymapper.CompanyToResponseMapper;
 import management.sedef.company.model.request.CompanyRequest;
+import management.sedef.company.model.request.CompanyUpdateRequest;
 import management.sedef.company.model.response.CompanyResponse;
 import management.sedef.company.model.response.CompanySummaryResponse;
 import management.sedef.company.service.CompanyService;
@@ -13,6 +15,7 @@ import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping(path = "/api/v1/company")
@@ -42,7 +45,7 @@ public class CompanyController {
     @GetMapping("/{id}")
     @PreAuthorize("hasAnyAuthority('company:detail')")
     public SuccessResponse<CompanyResponse> findById(@PathVariable Long id){
-        Company company = companyService.findById(id);
+        Company company = companyService.findCompanyById(id);
         CompanyResponse companyResponse = companyToResponseMapper.map(company);
         return SuccessResponse.success(companyResponse);
     }
@@ -57,28 +60,31 @@ public class CompanyController {
     }
 
     // ADMIN ve COMPANY_OWNER için şirket güncelleme yetkisi
-    @PutMapping("/{id}")
+    @PutMapping()
     @PreAuthorize("hasAnyAuthority('company:update')")
-    public SuccessResponse<Void> update(@PathVariable @Positive Long id, @RequestBody CompanyRequest request){
-        companyService.update(id, request);
+    public SuccessResponse<Void> update(@RequestBody CompanyUpdateRequest request){
+        companyService.update(request);
         return SuccessResponse.success();
     }
 
-    @GetMapping("/user/{id}")
+    //sahip oldugu şirketleri dönmesi için yazdım.
+    @GetMapping("/summary")
     @PreAuthorize("hasAnyAuthority('company:detail')")
-    public SuccessResponse<List<CompanySummaryResponse>> findCompaniesByUserId(@PathVariable Long id) {
-        List<Company> companyList = companyService.findCompaniesByUserId(id);
+    public SuccessResponse<List<CompanySummaryResponse>> findCompaniesByToken(@RequestBody TokenRequest request) {
+        List<Company> companyList = companyService.findCompaniesByToken(request);
 
         List<CompanySummaryResponse> companyResponses = companyList.stream()
                 .map(company -> {
-                    CompanySummaryResponse response = new CompanySummaryResponse();
-                    response.setId(company.getId());
-                    response.setName(company.getName());
+                    CompanySummaryResponse response = CompanySummaryResponse.builder()
+                            .id(company.getId())
+                            .name(company.getName())
+                            .build();
                     return response;
                 })
-                .toList();
+                .collect(Collectors.toList());
 
         return SuccessResponse.success(companyResponses);
     }
+
 
 }
